# AG1

./: .gitignore  CMakeLists.txt  flake.nix
pt01/: main.cpp
pt02/: avl_tree.cpp  avl_tree.hpp  avl_tree_tester.cpp
pt02-2/: avl_mini_prog.cpp  avl_pole_mini_prog.cpp  avl_tree_v2.hpp  main.cpp  reference.cpp  tester_vec.cpp  testing.cpp
pt03-2/: dp.cpp
pt04/: topsort.cpp
pt05/: heap.cpp
testing/: smallest-N-numbers.cpp
